--- a/TestAPP/app/build.gradle
+++ b/TestAPP/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     implementation "com.android.support:design:${google_support_library}"
     implementation 'com.android.support:support-v4:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 }
