--- a/TestAPP/app/build.gradle
+++ b/TestAPP/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
+    implementation 'com.squareup.okio:okio:1.7.0'
 }
