--- a/TestAPP/app/build.gradle
+++ b/TestAPP/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
     implementation 'com.squareup.okio:okio:1.7.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.gms:google-services:4.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
