--- a/TestAPP/app/build.gradle
+++ b/TestAPP/app/build.gradle
@@ -17,6 +17,10 @@ android {
         }
     }
     buildToolsVersion '28.0.1'
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
