--- a/TestAPP/app/build.gradle
+++ b/TestAPP/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.7.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.gms:google-services:4.0.2'
+
+    implementation "com.opencsv:opencsv:4.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
